Working version of COO transpose and CSR-COO-CSR transpose, fixes to matrix import

--- a/FinalProject/evaluation/tests/test_csr_coo_csr_convert.ipynb
+++ b/FinalProject/evaluation/tests/test_csr_coo_csr_convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_csr = '../test_matrices/csr/2_csr.csv'\n",
-    "file_tp = '../test_matrices/transposed/2_csr.csv'"
+    "file_csr = '../../test_matrices/csr/1_csr.csv'\n",
+    "file_csr_converted = '../../test_matrices/transposed/1_csr.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,80 +57,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row: 183, Cols: 183, NNZ: 1069\n",
-      "[[ 2.56037e-03 -1.17090e-07  0.00000e+00 ...  0.00000e+00 -4.19502e-10\n",
-      "   0.00000e+00]\n",
-      " [-3.38343e-16  2.56277e-03  0.00000e+00 ...  0.00000e+00  0.00000e+00\n",
-      "   0.00000e+00]\n",
-      " [ 0.00000e+00  0.00000e+00  2.58024e-03 ...  0.00000e+00  0.00000e+00\n",
-      "   0.00000e+00]\n",
+      "Row: 768, Cols: 768, NNZ: 2934\n",
+      "[[ -13.489 -376.99     0.    ...    0.       0.       0.   ]\n",
+      " [ 376.99   -13.489    0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.     -13.489 ...    0.       0.       0.   ]\n",
       " ...\n",
-      " [ 0.00000e+00  0.00000e+00  0.00000e+00 ...  2.23600e+03  0.00000e+00\n",
-      "   0.00000e+00]\n",
-      " [ 0.00000e+00  0.00000e+00  0.00000e+00 ...  0.00000e+00  2.23600e+03\n",
-      "   0.00000e+00]\n",
-      " [ 0.00000e+00  0.00000e+00  0.00000e+00 ...  0.00000e+00  0.00000e+00\n",
-      "   2.23600e+03]]\n"
+      " [   0.       0.       0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.       0.    ...    0.     -33.333    0.   ]\n",
+      " [   0.       0.       0.    ...    0.       1.    -333.33 ]]\n"
      ]
     }
    ],
    "source": [
     "rows, columns, row_offsets, column_indices, values = load_csr(file_csr)\n",
     "\n",
-    "# build CSR matrix in scipy and transpose\n",
+    "# build old CSR matrix in scipy and make dense\n",
     "csr = sp.sparse.csr_matrix((values, column_indices, row_offsets), shape=(rows, columns))\n",
-    "csc = csr.transpose()\n",
+    "csr_dense = csr.todense()\n",
     "\n",
-    "# make dense\n",
-    "csc_dense = csc.todense()\n",
-    "print(csc_dense)"
+    "print(csr_dense)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row: 183, Cols: 183, NNZ: 1069\n",
-      "[[ 2.56037e-03 -1.17090e-07  0.00000e+00 ...  0.00000e+00 -4.19502e-10\n",
-      "   0.00000e+00]\n",
-      " [-3.38343e-16  2.56277e-03  0.00000e+00 ...  0.00000e+00  0.00000e+00\n",
-      "   0.00000e+00]\n",
-      " [ 0.00000e+00  0.00000e+00  2.58024e-03 ...  0.00000e+00  0.00000e+00\n",
-      "   0.00000e+00]\n",
+      "Row: 768, Cols: 768, NNZ: 2934\n",
+      "[[ -13.489 -376.99     0.    ...    0.       0.       0.   ]\n",
+      " [ 376.99   -13.489    0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.     -13.489 ...    0.       0.       0.   ]\n",
       " ...\n",
-      " [ 0.00000e+00  0.00000e+00  0.00000e+00 ...  2.23600e+03  0.00000e+00\n",
-      "   0.00000e+00]\n",
-      " [ 0.00000e+00  0.00000e+00  0.00000e+00 ...  0.00000e+00  2.23600e+03\n",
-      "   0.00000e+00]\n",
-      " [ 0.00000e+00  0.00000e+00  0.00000e+00 ...  0.00000e+00  0.00000e+00\n",
-      "   2.23600e+03]]\n"
+      " [   0.       0.       0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.       0.    ...    0.     -33.333    0.   ]\n",
+      " [   0.       0.       0.    ...    0.       1.    -333.33 ]]\n"
      ]
     }
    ],
    "source": [
-    "rows, columns, row_offsets_tp, column_indices_tp, values_tp = load_csr(file_tp)\n",
+    "rows, columns, row_offsets, column_indices, values = load_csr(file_csr_converted)\n",
     "\n",
-    "# build CSR matrix in scipy and make dense\n",
-    "csr_tp_file = sp.sparse.csr_matrix((values_tp, column_indices_tp, row_offsets_tp), shape=(rows, columns))\n",
-    "csr_tp_file_dense = csr_tp_file.todense()\n",
-    "print(csr_tp_file_dense)\n"
+    "# build old CSR matrix in scipy and make dense\n",
+    "csr_converted = sp.sparse.csr_matrix((values, column_indices, row_offsets), shape=(rows, columns))\n",
+    "csr_dense_converted = csr_converted.todense()\n",
+    "\n",
+    "print(csr_dense_converted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +130,7 @@
    ],
    "source": [
     "# check for equality\n",
-    "close = np.allclose(csc_dense, csr_tp_file_dense)\n",
+    "close = np.allclose(csr_dense, csr_dense_converted)\n",
     "print(close)"
    ]
   }
@@ -164,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
