--- a/FinalProject/evaluation/dev/csr_to_coo.ipynb
+++ b/FinalProject/evaluation/dev/csr_to_coo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,25 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3, 0, 1, 2]\n",
       "[0, 0, 1, 1, 3]\n",
+      "[1, 3, 0, 1, 2]\n",
       "[1, 2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
     "# transpose COO\n",
-    "for i in range(nnz):\n",
-    "    tmp = row_indices_coo[i]\n",
-    "    row_indices_coo[i] = column_indices_coo[i]\n",
-    "    column_indices_coo[i] = tmp\n",
+    "# for i in range(nnz):\n",
+    "#     tmp = row_indices_coo[i]\n",
+    "#     row_indices_coo[i] = column_indices_coo[i]\n",
+    "#     column_indices_coo[i] = tmp\n",
     "\n",
     "print(row_indices_coo)\n",
     "print(column_indices_coo)\n",
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 1, 1]\n"
+      "[2, 2, 0, 1]\n"
      ]
     }
    ],
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 3, 4, 5]\n"
+      "[0, 2, 4, 4, 5]\n"
      ]
     }
    ],
@@ -119,16 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 3, 4, 5]\n",
-      "[1, 0, 1, 3, 0]\n",
-      "[3, 1, 4, 5, 2]\n"
+      "[0, 2, 4, 4, 5]\n",
+      "[1, 3, 0, 1, 2]\n",
+      "[1, 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
