--- a/FinalProject/evaluation/tests/test_csr_transpose.ipynb
+++ b/FinalProject/evaluation/tests/test_csr_transpose.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,21 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_coo = '../test_matrices/coo/1_coo.csv'\n",
-    "file_tp = '../test_matrices/transposed/1_coo.csv'"
+    "file_csr = '../../test_matrices/csr/10_csr.csv'\n",
+    "file_tp = '../../test_matrices/transposed/10_csr.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_coo(path):\n",
+    "def load_csr(path):\n",
     "    # load CSR matrix from file\n",
     "    with open(path, newline='') as csvfile:\n",
     "        reader = csv.reader(csvfile, delimiter=' ', quotechar='|')\n",
@@ -44,7 +44,7 @@
     "        print(f'Row: {rows}, Cols: {columns}, NNZ: {nnz}')\n",
     "        \n",
     "        # row offsets\n",
-    "        row_indices = np.array([int(ro[:-1]) for ro in reader.__next__() if len(ro) > 1])\n",
+    "        row_offsets = np.array([int(ro[:-1]) for ro in reader.__next__() if len(ro) > 1])\n",
     "        \n",
     "        # column indices\n",
     "        column_indices = np.array([int(ci[:-1]) for ci in reader.__next__() if len(ci) > 1])\n",
@@ -52,95 +52,88 @@
     "        # values\n",
     "        values = np.array([float(v[:-1]) for v in reader.__next__() if len(v) > 1])\n",
     "        \n",
-    "    return rows, columns, row_indices, column_indices, values"
+    "    return rows, columns, row_offsets, column_indices, values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row: 822, Cols: 822, NNZ: 3802\n",
-      "[[1.     0.     0.     ... 0.     0.     0.    ]\n",
-      " [0.     0.     0.     ... 0.     0.     0.    ]\n",
-      " [0.     0.     0.     ... 0.     0.     0.    ]\n",
+      "Row: 768, Cols: 768, NNZ: 2934\n",
+      "[[ -13.489  376.99     0.    ...    0.       0.       0.   ]\n",
+      " [-376.99   -13.489    0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.     -13.489 ...    0.       0.       0.   ]\n",
       " ...\n",
-      " [0.5656 0.     0.     ... 0.     0.     0.    ]\n",
-      " [0.4622 0.     0.     ... 0.     0.     0.    ]\n",
-      " [0.     1.     0.     ... 0.     0.     0.    ]]\n"
+      " [   0.       0.       0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.       0.    ...    0.     -33.333    1.   ]\n",
+      " [   0.       0.       0.    ...    0.       0.    -333.33 ]]\n"
      ]
     }
    ],
    "source": [
-    "rows, columns, row_indices, column_indices, values = load_coo(file_coo)\n",
+    "rows, columns, row_offsets, column_indices, values = load_csr(file_csr)\n",
     "\n",
     "# build CSR matrix in scipy and transpose\n",
-    "coo = sp.sparse.coo_matrix((values, (row_indices, column_indices)), shape=(rows, columns))\n",
-    "coo_tp = coo.transpose()\n",
+    "csr = sp.sparse.csr_matrix((values, column_indices, row_offsets), shape=(rows, columns))\n",
+    "csc = csr.transpose()\n",
     "\n",
     "# make dense\n",
-    "coo_tp_dense = coo_tp.todense()\n",
-    "print(coo_tp_dense)"
+    "csc_dense = csc.todense()\n",
+    "print(csc_dense)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row: 822, Cols: 822, NNZ: 3802\n",
-      "[[1.     0.     0.     ... 0.5656 0.4622 0.    ]\n",
-      " [0.     0.     0.     ... 0.     0.     1.    ]\n",
-      " [0.     0.     0.     ... 0.     0.     0.    ]\n",
+      "Row: 768, Cols: 768, NNZ: 2934\n",
+      "[[ -13.489  376.99     0.    ...    0.       0.       0.   ]\n",
+      " [-376.99   -13.489    0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.     -13.489 ...    0.       0.       0.   ]\n",
       " ...\n",
-      " [0.     0.     0.     ... 0.     0.     0.    ]\n",
-      " [0.     0.     0.     ... 0.     0.     0.    ]\n",
-      " [0.     0.     0.     ... 0.     0.     0.    ]]\n"
+      " [   0.       0.       0.    ...    0.       0.       0.   ]\n",
+      " [   0.       0.       0.    ...    0.     -33.333    1.   ]\n",
+      " [   0.       0.       0.    ...    0.       0.    -333.33 ]]\n"
      ]
     }
    ],
    "source": [
-    "rows, columns, row_indices_tp, column_indices_tp, values_tp = load_coo(file_tp)\n",
+    "rows, columns, row_offsets_tp, column_indices_tp, values_tp = load_csr(file_tp)\n",
     "\n",
     "# build CSR matrix in scipy and make dense\n",
-    "coo_tp_file = sp.sparse.coo_matrix((values_tp, (row_indices_tp, column_indices_tp)), shape=(rows, columns))\n",
-    "coo_tp_file_dense = coo_tp_file.todense()\n",
-    "print(coo_tp_file_dense)"
+    "csr_tp_file = sp.sparse.csr_matrix((values_tp, column_indices_tp, row_offsets_tp), shape=(rows, columns))\n",
+    "csr_tp_file_dense = csr_tp_file.todense()\n",
+    "print(csr_tp_file_dense)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "# check for equality\n",
-    "close = np.allclose(coo_tp_dense, coo_tp_file_dense)\n",
+    "close = np.allclose(csc_dense, csr_tp_file_dense)\n",
     "print(close)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -159,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
